# G-CVSNT

./: .gitignore  README.md
cvsnt/cvsnt-2.5.05.3744/: .cvsignore  .gitignore  .project  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  build.h  ca.pem  config.h  config.h.in  configure  configure.in  cvsnt.sln  cvsnt.vcproj  cvsnt.vcxproj  depcomp  mkchangelog  protocol_map.ini  rcs_convert.vcxproj  version.h  version_fu.h  version_no.h
cvsnt/cvsnt-2.5.05.3744/ReleaseWin32/: COPYING  cvs.chm  extnt.ini  march-hare.url  protocol_map.ini  relnotes.rtf  twitter.url
cvsnt/cvsnt-2.5.05.3744/blake3/: Makefile.am  blake3.vcxproj  blake3_avx2.c  blake3_dispatch.c  blake3_impl.h  blake3_sse41.c
cvsnt/cvsnt-2.5.05.3744/ca_blobs_fs/: Makefile.am  ca_blob_format.h  ca_blobs_fs.vcxproj  calc_hash.h  content_addressed_fs.h  push_whole_blob.h  streaming_blobs.h  streaming_compressors.h
cvsnt/cvsnt-2.5.05.3744/contrib/: genkey
cvsnt/cvsnt-2.5.05.3744/contrib_nt/: script.vbs
cvsnt/cvsnt-2.5.05.3744/control-panel/: Control.cpp  ControlService.cpp  CvsControl.h  cvscontrol.rc  cvscontrol.vcproj  cvscontrol.vcxproj  cvscontrold.cpp  resource.h  server.cpp
cvsnt/cvsnt-2.5.05.3744/cvsapi/: Codepage.cpp  Codepage.h  DirectoryAccess.h  DnsApi.h  FileAccess.h  FileEntry.h  GetOptions.cpp  GetOptions.h  HttpSocket.h  LibraryAccess.h  Makefile.am  Makefile.in  RunFile.h  SSPIHandler.h  ServerIO.cpp  ServerIO.h  SocketIO.h  SplitPath.cpp  SplitPath.h  SqlConnection.cpp  SqlConnection.h  SqlConnectionInformation.cpp  SqlConnectionInformation.h  SqlRecordset.cpp  SqlRecordset.h  SqlVariant.cpp  SqlVariant.h  TagDate.cpp  TagDate.h  TokenLine.cpp  TokenLine.h  XmlNode.cpp  XmlNode.h  XmlTree.cpp  XmlTree.h  Zeroconf.cpp  Zeroconf.h  crypt.cpp  crypt.h  cvs_smartptr.h  (+11 more)
cvsnt/cvsnt-2.5.05.3744/cvsdelta/: Makefile.am  Makefile.in  cvsdelta.cpp  cvsdelta.h  cvsdelta.vcproj  cvsdelta.vcxproj  libinterface.cpp
cvsnt/cvsnt-2.5.05.3744/cvsgui/: Makefile.am  Makefile.in  cvsgui.cpp  cvsgui.h  cvsgui.vcproj  cvsgui.vcxproj  cvsgui_process.cpp  cvsgui_process.h  cvsgui_protocol.h  cvsgui_wire.cpp  cvsgui_wire.h  readme.txt
cvsnt/cvsnt-2.5.05.3744/cvsntcpl/: AboutPage.cpp  AboutPage.h  AdvertDialog.cpp  AdvertDialog.h  Applet.cpp  CompatibiltyPage.cpp  CompatibiltyPage.h  LeftPane.cpp  LeftPane.h  MainFrame.cpp  MainFrame.h  MainFrameWnd.cpp  MainFrameWnd.h  NewRootDialog.cpp  NewRootDialog.h  ProtocolsPage.cpp  ProtocolsPage.h  RepositoryPage.cpp  RepositoryPage.h  RightPane.cpp  RightPane.h  StdAfx.cpp  StdAfx.h  TooltipPropertyPage.cpp  TooltipPropertyPage.h  UsageDialog.cpp  UsageDialog.h  advancedpage.cpp  advancedpage.h  cvsnt.cpp  cvsnt.h  cvsnt1.cpp  cvsnt1.h  cvsntcpl.rc  cvsntcpl.vcproj  cvsntcpl.vcxproj  resource.h  serverPage.cpp  serverPage.h  settingspage.cpp  (+1 more)
cvsnt/cvsnt-2.5.05.3744/cvsservice/: Service.cpp  StdAfx.cpp  StdAfx.h  cvsservice.rc  cvsservice.vcproj  cvsservice.vcxproj
cvsnt/cvsnt-2.5.05.3744/cvstools/: Cvsgui.cpp  Cvsgui.h  EntriesParser.cpp  EntriesParser.h  GlobalSettings.h  Makefile.am  Makefile.in  ProtocolLibrary.cpp  ProtocolLibrary.h  RootSplitter.cpp  RootSplitter.h  Scramble.cpp  Scramble.h  ServerConnection.cpp  ServerConnection.h  ServerInfo.cpp  ServerInfo.h  TriggerLibrary.cpp  TriggerLibrary.h  cvsroot.h  cvstools.h  cvstools.vcproj  cvstools.vcxproj  export.h  plugin_interface.h  protocol_interface.h  trigger_interface.h
cvsnt/cvsnt-2.5.05.3744/debian/: README  README.Debian  README.source  build.sh  changelog  conffiles  control  copyright  cvsnt-cafs-tools.install  cvsnt-cafs.install  cvsnt-cafs.postinst  cvsnt-cafs.postrm  cvsnt-cvslockd.install  cvsnt-libs.install  cvsnt-proxy.dirs  cvsnt-proxy.install  cvsnt-proxy.postinst  cvsnt-server-commons.dirs  cvsnt-server-commons.preinst  cvsnt-server.dirs  cvsnt-server.install  cvsnt.dirs  cvsnt.install  install.sh  make_deb.sh  prep.sh  rules  vars
cvsnt/cvsnt-2.5.05.3744/diff/: Makefile.am  Makefile.in  analyze.c  context.c  diff.c  diff.h  diff3.c  diffrun.h  dir.c  io.c  libdiff.vcproj  libdiff.vcxproj  system.h  unicodeapi.cpp  unicodeapi.h  util.c
cvsnt/cvsnt-2.5.05.3744/doc/: Howto_CompileCVSNTHelp.txt  PServer.example  Plugins.example  RCSFILES  build  build-pdk.bat  build.bat  buildchm.bat  cvs.dbk  cvsclient.dbk  jadetex.cfg  pdk.cfg
cvsnt/cvsnt-2.5.05.3744/external_libs/: libcharset.h  libiconv.lib  list.txt  localcharset.h
cvsnt/cvsnt-2.5.05.3744/extnt/: StdAfx.h  extnt.cpp  extnt.rc  extnt.vcproj  extnt.vcxproj
cvsnt/cvsnt-2.5.05.3744/genbuild/: Makefile  Resource.h  genbuild.cpp  genbuild.rc  genbuild.vcproj  genbuild.vcxproj
cvsnt/cvsnt-2.5.05.3744/genkey/: Makefile  genkey.c  genkey.vcproj  genkey.vcxproj
cvsnt/cvsnt-2.5.05.3744/installer/: combined-license.rtf  common.wxs  crt.wxs  cvsnt-client.wxs  cvsnt-local-client.wxs  cvsnt-server.wxs  cvsnt.wxs  ebook.wxs  ebooktrial.wxs  facebook.url  github.url  gpl.rtf  local.wxs  makefile  mfc.wxs  mfc42.wxs  mfc42u.wxs  mfc71.wxs  mfc71u.wxs  msvcrt.wxs  register.wxs  releasemanager.wxs  scci.wxs  server.wxs  suite-client-trial.wxs  suite-client.wxs  suite-server-trial.wxs  suite-server.wxs  tortoisecvs.wxs  triggers.wxs  ui.wxs  unison.wxs  vc90rt.wxs  wait4cvs.wxs  wincvs.wxs  winmerge.url  winmerge.wxs  workspacemanager.wxs
cvsnt/cvsnt-2.5.05.3744/keyValueServer/: Makefile.am  blob_push_log.h  blob_server_func_deps.h  license.txt  readme.md
cvsnt/cvsnt-2.5.05.3744/lib/: Makefile.am  Makefile.in  argmatch.c  daemon.c  daemon.h  fnmatch.c  fnmatch.h  gai-errnos.h  getaddrinfo.c  getaddrinfo.h  getdelim.c  getdelim.h  getline.c  getline.h  getnameinfo.c  getnameinfo.h  getopt1.h  getopt_long.c  getpass.c  getpass.h  gnulib.vcproj  gnulib.vcxproj  inet_aton.c  inet_aton.h  memmove.c  regcomp.c  regex1.h  sighandle.c  socket.h  strerror.c  system.h  timegm.c  timegm.h  xtime.h
cvsnt/cvsnt-2.5.05.3744/libxml/: config.h  elfgcchack.h  testModule.c  tree.c  trio.c  trio.h  triodef.h  trionan.c  trionan.h  triop.h  triostr.c  triostr.h  xmllint.c  xmlmemory.c
cvsnt/cvsnt-2.5.05.3744/lockservice/: LockParse.cpp  (+12 more)
(+2218 files in other folders)
